# hex-ray

./: Cargo.toml  README.md
docs/: demo.tape
src/: cli.rs  format.rs  helpers.rs  main.rs  print.rs
src/cli/: mod.rs
src/cli/cmd/: mod.rs  output.rs  tui.rs  view.rs
src/cli/cmd/inspect/: app.rs  events.rs  mod.rs  row.rs  ui.rs
src/cli/cmd/tui/: app.rs  events.rs  mod.rs  row.rs  ui.rs
src/utils/: ansi.rs  format.rs  helpers.rs  mod.rs
