[package]
name = "hex-ray"
description = "A hexdump utility"
version = "0.1.0"
edition = "2021"
author = "Shresht7"
license = "MIT"
homepage = "https://github.com/Shresht7/hex-ray"
repository = "https://github.com/Shresht7/hex-ray"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
