[package]
name = "hex-ray"
description = "A hexdump command-line utility"
version = "0.2.1"
edition = "2021"
author = "Shresht7"
license = "MIT"
homepage = "https://github.com/Shresht7/hex-ray"
repository = "https://github.com/Shresht7/hex-ray"
keywords = ["hexdump", "cli"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.28.1"
